# music

./: .gitignore  FAVICON.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  admin.html  app.js  browserconfig.xml  favicon-preview.html  index.html  site.webmanifest  styles.css
.github/workflows/: build-tauri-app.yml  update-catalog.yml
music/: .example.json  README.md  ashton-daniels-love-for-your-creation.json  ashton-daniels-wondrous-love.json  catalog.json  matt-strauss-heartbeat.json  matt-strauss-my-rock-of-salvation.json
music-uploader/: AUTOMATED_BUILDS.md  BUILD_WINDOWS.md  CHANGELOG.md  ICONS.md  README.md  SETUP_COMPLETE.md  TEST_RESULTS.md  build.sh  create-release.sh  package-lock.json  package.json
music-uploader/src/: index.html
music-uploader/src-tauri/: Cargo.toml  tauri.conf.json
music-uploader/src-tauri/icons/: icon.icns
music-uploader/src-tauri/src/: main.rs
